# ex3

./: README.md  details.txt
src/: CMakeLists.txt  MiniCacheManager.hpp  cacheManager.cpp  cacheManager.hpp  calculator.cpp  calculator.hpp  command.hpp  crc32.c  folderManager.cpp  folderManager.hpp  main.cpp  matrixIO.cpp  matrixIO.hpp  miniCacheManager.cpp  miniCacheManager.hpp  operatorID.cpp  operatorID.hpp  parser.cpp  parser.hpp  sha1.cpp  sha1.hpp
src/bmp_img/: BMPImg.cpp  BMPImg.h  CMakeLists.txt  Color.cpp  Color.h  IMatrix.cpp  bmp_tester.cpp  bmp_tester.hpp  mymain.cpp
src/matrix/: CMakeLists.txt  ErrorCode.c  ErrorCode.h  ErrorCode.hpp  Matrix.c  Matrix.h  MatrixClass.hpp
